web-infras/parser/tests/fixtures/babel/es2015/statements/label-invalid-func-async/output.txt
[SyntaxError]: Async functions can only be declared at the top level or inside a block. (1,12)
1|foo: async function bar() {}
 |          ^
[SyntaxError]: In non-strict mode code, functions can only be declared at top level, inside a block, or as the body of an if statement. (1,12)
1|foo: async function bar() {}
 |          ^
